--- a/Notebooks/03_exploratory_data_analysis.ipynb
+++ b/Notebooks/03_exploratory_data_analysis.ipynb
@@ -3971,7 +3971,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Your answer here"
+    "**A: 1** The exploratory data analysis above demonstrates a few key points about the dataset and the relationships it contains. The dataset contains the categorical features of resort names, regions, and states (regions and states are not identical). It contains numerical features such as elevations; numbers and types of facilities, skiable terrain; snow-making ability; and prices for weekday, weekend, and night skiing. Further, including state population information allows us to see relationships between these variables and numerical variables related to states such as land area and population.\n",
+    "\n",
+    "There is not a clear grouping linking state data and ticket prices. This fact suggests that the resort characteristics may play a larger role in ticket prices. This relationshp should be investigated and modeled further.\n",
+    "\n",
+    "Some features to be wary of include resort density, as sizes and populations vary so much across states. At the same time ticket prices seem more related to the characteristics of the resorts themselves.\n",
+    "\n",
+    "The total vertical_drop, the number of fast quads, the total number of chairs in general, and the total number of runs, seem like useful features to model. The state labels may still be useful, however. For instance, the geography of states most similar to the home state of Montana could provide useful information (i.e. what works in the small, dense states of the N\n",
+    "\n"
    ]
   },
   {
@@ -4383,15 +4390,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing file.  \"../data/ski_data_step3_features.csv\"\n"
+     ]
+    }
+   ],
    "source": [
     "# Save the data \n",
     "\n",
     "datapath = '../data'\n",
     "save_file(ski_data, 'ski_data_step3_features.csv', datapath)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
