add preprocessing and training summary

--- a/Notebooks/03_exploratory_data_analysis.ipynb
+++ b/Notebooks/03_exploratory_data_analysis.ipynb
@@ -3977,7 +3977,7 @@
     "\n",
     "Some features to be wary of include resort density, as sizes and populations vary so much across states. At the same time ticket prices seem more related to the characteristics of the resorts themselves.\n",
     "\n",
-    "The total vertical_drop, the number of fast quads, the total number of chairs in general, and the total number of runs, seem like useful features to model. The state labels may still be useful, however. For instance, the geography of states most similar to the home state of Montana could provide useful information (i.e. what works in the small, dense states of the N\n",
+    "The total vertical_drop, the number of fast quads, the total number of chairs in general, and the total number of runs, seem like useful features to model. The state labels may still be useful, however. For instance, the geography of states most similar to the home state of Montana could provide useful information (i.e. what works in the small, dense states of the Northeast may not apply to the large states of the West).\n",
     "\n"
    ]
   },
