add preprocessing and training summary, notebook 4

--- a/Notebooks/04_preprocessing_and_training.ipynb
+++ b/Notebooks/04_preprocessing_and_training.ipynb
@@ -3750,8 +3750,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Your answer here"
+    "**A: 1**\n",
+    "\n",
+    "Before the preprocessing and training step, I started by considering the mean value as a predictor. I took this action in order to eventually show that the model performs better than simply guessing the mean.\n",
+    "\n",
+    "To begin begin preprocessing and training, I split the data into a train set and a test set in order to cross-validate the model. The data was split into 70/30 train/test sets of 193 observations of of 31 variables and 83 observations of 31 variables.\n",
+    "\n",
+    "Then, I found the coefficient of determination for each set (test, train). Using the mean value as a prediction resulted in an $R^2$ value of 0 for the training set and -0.003 for the test set. $R^2$ explains the the amount of variance in each set. In order to summarize the difference between prediced and actual value I used mean absolute error and mean squared error.\n",
+    "\n",
+    "The mean absolute error for the training set was 17.923 and for the test set it was 19.136. The mean squared error for the training set was 614.133 and for the test set it was 581.437.\n",
+    "\n",
+    "For the initial linear model, I first imputed the missing values with the median and the mean. Using pipelines, I refined the linear model, then used GridSearch to select the most important features:\n",
+    "\n",
+    "1. Vertical drop\n",
+    "2. Snow making\n",
+    "3. Total chairs\n",
+    "4. Fast quads\n",
+    "5. Runs\n",
+    "\n",
+    "Next, I used a random forest model. The random forest model. The random forest model found the most important features to be:\n",
+    "\n",
+    "1. Fast quads\n",
+    "2. Runs\n",
+    "3. Snow making\n",
+    "4. Vertical drop\n",
+    "\n",
+    "The random forest model has a lower cross-validation mean absolute error by almost $1 and less variability. Going forward, I suggest using the four top features found in the random forest model. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
